<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/of_45_lb_plates"
        android:id="@+id/num_45_plates" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/of_25_lb_plates"
        android:id="@+id/num_25_plates" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/of_10_lb_plates"
        android:inputType="number"
        android:id="@+id/num_10_plates"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/of_5_lb_plates"
        android:inputType="number"
        android:id="@+id/num_5_plates" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/of_2_5_lb_plates"
        android:id="@+id/num_2.5_plates" />


</LinearLayout>